# zero2prod

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  configuration.yaml  deny.toml
.github/workflows/: rust.yml
migrations/: 20240726084510_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
