[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["simon <ynwdlxm@163.com>"]
license = "MIT"

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
# [[bin]]
# path = "src/main.rs"
# name = "zero2prod"

[dependencies]
actix-web = "4.8.0"
serde = { version = "1.0.204", features = ["derive"] }

[dependencies.sqlx]
version = "0.8.0"
default-features = false
features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
]


[dev-dependencies]
reqwest = "0.12.5"
